# turtwig

./: .buildinfo  .gitignore  LICENSE  README.md  contributing.html  devshell.nix  flake.nix  genindex.html  index.html  installation.html  nix-templates.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  turtwig-api.html  turtwig.data.html  turtwig.futils.html  turtwig.validation.html  tutorials.html
.github/workflows/: build-sphinx-docs.yaml
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  nix-templates.rst.txt  turtwig.data.rst.txt  turtwig.futils.rst.txt  turtwig.validation.rst.txt
docs/: conf.py  contributing.rst  index.rst  installation.rst  modules.rst  nix-templates.rst  turtwig-api.rst  turtwig.data.rst  turtwig.futils.rst  turtwig.rst  turtwig.validation.rst  tutorials.rst
templates/: default.nix
templates/python312/: .gitignore  README.md  flake.nix  pyproject.toml
tests/test_data/: test_data_numpy.py  test_dicom.py  test_h5.py
tests/test_utils/: test_common.py  test_decorator.py  test_dict.py  test_parallel.py  test_path.py  test_sequence.py  test_string.py
tests/test_validation/: test_datatype.py  test_numpy.py  test_validation_datatype.py  test_validation_numpy.py
turtwig/: __init__.py  __main__.py  main.py
turtwig/array/: __init__.py
turtwig/data/: __init__.py  dicom.py  h5.py  numpy.py
turtwig/futils/: __init__.py  common.py  decorator.py  dict.py  oop.py  parallel.py  path.py  sequence.py  string.py  wrappers.py
turtwig/logging/: __init__.py
(+20 files in other folders)
